<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="8dp"
    android:paddingEnd="20dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/novel_title_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/novel_author_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/sf_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/novel_sfid_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

</LinearLayout>
